GeneWeb version 4.01
--------------------

* Languages
  - [14 Mar 01] Added Brazilian Portuguese (Paulo Francisco Sedrez).

* GeneWeb server or CGI (gwd)
  - [15 Mar 01] Fixed bug: when merging two men (the problem did not
    happen for women), the witnesses of mariage of the second man were
    incompletely reported to the first one (they are indicated as witness
    in the first man page, but not in their own personal page in the
    "relation" section).
  - [15 Mar 01] The displaying of "John Foo of Bar, duke of Bar" ("Foo of
    Bar" being his complete surname) is now displayed "John Foo, duke of Bar"
    (was displayed like that before only for the case "John of Bar, duke of
    Bar").
  - [14 Mar 01] Added option "-blang": if no language is specified in
    the request (i.e. explicitely selected by a flag, for example), choose
    preferably the user preferred language (the one of his browser) rather
    than the default data base language.
  - [13 Mar 01] Fixed problem in displaying "anniversaries month"
    in Estonian: the month appeared with all its declinations.

* Lexicon (lang/lexicon.txt)
  - [14 Mar 01] Added the ability to add "derived" languages,
    i.e. languages where most of the phrases are the same than some other
    already existing language, but with some changes here and there. In
    the lexicon, one can write a line with "xx=yy" to indicate that, where
    xx is the derived language and yy the initial language.
  - [14 Mar 01] Changed the French translation of "nth cousin":
    indeed, in French, the "nth cousin" is translated, litterally, by
    "cousin of the pth degree" where "p" is "n+1": e.g. a "4th cousin" is
    "a cousin of the 5th degree". Perhaps the same thing has to be done
    in other languages...
  - [14 Mar 01] Changed the "*nth (cousin)*" entry to directly
    represent what has to be used to translate the "nth". Previously, it
    was "indirect", looking for another entry in the lexicon, which was